--- a/css/main.css
+++ b/css/main.css
@@ -3,4 +3,7 @@
 @import "./layout/header.css";
 @import "./layout/rodape.css";
 @import "./module/movie.css";
+@import "./layout/categorias.css";
+@import "./module/card.css";
 
+  
